# wikifi

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CODE-FORMAT.md  Dockerfile  FEEDBACK.md  Makefile  README.md  TESTING-AND-DEMO.md  VISION.md  docker-compose.yml  main.py  pyproject.toml  test_ollama.py  test_ollama_2.py
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
.spec/: capabilities.md  entities.md  external_dependencies.md  intent.md
.wikifi/: .gitignore  application.md  capabilities.md  config.toml  cross_cutting.md  diagrams.md  domains.md  entities.md  execution_summary.json  execution_summary.md  external_dependencies.md  hard_specifications.md  integrations.md  intent.md  introspection.json  personas.md  schematics.md  user_personas.md  user_stories.md
.wikifi/.cache/: aggregation.json  extraction.json
.wikifi/notes/: .env.example.json  .env.example_7582313974677982709.json  .githooks_pre-commit.json  .githooks_pre-push.json  .github_pull_request_template.md.json  .github_workflows_ci.yml.json  .gitignore.json  .gitignore_-2093971826656641003.json  .gitignore_-6640364271772853051.json  .spec_.gitignore.json  .spec_capabilities.md.json  .spec_cross_cutting.md.json  .spec_diagrams.md.json  .spec_domains.md.json  .spec_entities.md.json  .spec_external_dependencies.md.json  .spec_hard_specifications.md.json  .spec_integrations.md.json  .spec_intent.md.json  .spec_personas.md.json  .spec_user_stories.md.json  CLAUDE.md.json  CLAUDE.md_-5363581130337828558.json  CODE-FORMAT.md.json  CODE-FORMAT.md_-2058745618973727980.json  Dockerfile.json  Dockerfile_-1165085765805897829.json  Makefile.json  Makefile_5756216948208346748.json  README.md.json  README.md_9052046935969996743.json  VISION.md.json  VISION.md_4319952062277501062.json  aggregation.py_-1811526275267251587.json  capabilities.md_-1151263146059693262.json  ci.yml_-3354989339038409453.json  config.py_8394165951183285300.json  conftest.py_-8617662226752403360.json  cross_cutting.md_1108987169037585317.json  derivation.py_2893421026487009497.json  (+43 more)
.wikifi/sections/: core_entities_and_their_structures.md  cross-cutting_concerns.md  ddd_domains_and_subdomains.md  external-system_dependencies.md  hard_specifications.md  intent_and_problem_space.md  internal_+_external_integrations.md  (+4 more)
backend/: main.py  pyproject.toml
docs/: plan-a-cache-persistence.md  plan-b-surgical-aggregation.md
frontend/: package.json
tests/: benchmark.md  conftest.py  test_aggregator.py  test_anthropic_provider.py  test_cache.py  test_chat.py  test_cli.py  test_config.py  test_critic.py  test_deriver.py  test_evidence.py  test_extraction.py  test_extractor.py  test_filters.py  test_fingerprint.py  test_introspection.py  test_llm_io.py  test_notes_store.py  test_ollama_provider.py  test_openai_provider.py  test_orchestrator.py  test_pipeline.py  test_providers.py  test_repograph.py  test_report.py  test_sections.py  test_specialized.py  test_surgical.py  test_traversal.py  test_walker.py  test_wiki.py  test_workspace.py
wikifi/: __init__.py  __main__.py  aggregation.py  aggregator.py  cache.py  chat.py  cli.py  config.py  constants.py  critic.py  derivation.py  deriver.py  evidence.py  extraction.py  extractor.py  factory.py  filters.py  fingerprint.py  introspection.py  llm.py  llm_io.py  logging_setup.py  main.py  models.py  notes_store.py  orchestrator.py  pipeline.py  prompts.py  providers.py  repograph.py  report.py  reporting.py  schemas.py  sections.py  surgical.py  synthesis.py  text.py  traversal.py  walker.py  wiki.py  (+1 more)
(+41 files in other folders)
