[project]
name = "wikifi"
version = "0.1.0"
description = "Walk any codebase and produce a technology-agnostic markdown wiki of its intent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "codeninja" }]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pathspec>=1.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "rich>=15.0.0",
    "typer>=0.24.2",
]

[project.scripts]
wikifi = "wikifi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["wikifi"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
