[project]
name = "wikifi"
version = "0.1.0"
description = "Walk any codebase and produce a technology-agnostic markdown wiki of its intent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "codeninja" }]
keywords = ["wiki", "documentation", "migration", "llm", "ollama"]
dependencies = [
    "ollama>=0.4.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "pathspec>=0.12",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.scripts]
wikifi = "wikifi.cli:main"

[project.urls]
Homepage = "https://github.com/codeninja/wikifi"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wikifi"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=wikifi --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["wikifi"]
omit = ["tests/*"]
